feat: allow to filter insights/question by predictor value
